fix: remove overflow on mobile view

--- a/src/components/BitButton.module.css
+++ b/src/components/BitButton.module.css
@@ -8,8 +8,9 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 2.6rem;
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
 
   & > .text {
     display: inline-block;
